@@ -5,6 +5,9 @@ aren't documented here, unless the bug-fix has a major observable
 effect.  If you change something in VXL, please document it here.
 
 ---------------------------------------------------------------------------
+      - changed the interface of vnl_matrix_fixed get_row and get_column
+        to return a vnl_vector_fixed
+
 ****************************
 VXL 1.9.0	- July 2007
 ****************************
